* Added new widget UnixAccessRightsExtended which provides additional checkboxes to set setuid, setgid and sticky bit permissions (Bug #15087) * Changed css style .umcUNIXAccessRights-table td to use italic font
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45333 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/umc-modifications.less
+++ b/management/univention-management-console-frontend/css/umc-modifications.less
@@ -1033,6 +1033,10 @@ textarea {
 	padding:4px;
 }
 
+.umcUNIXAccessRights-table td {
+	font-style: italic;
+}
+
 .umcPageHeader h1 {
 	margin: 0.833em 0;
 	padding: 0 0 0.556em 0.311em;
