* Bug #32168: Refactor context menu of gallery pane to avoid issues with popup
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45429 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/umc-modifications.less
+++ b/management/univention-management-console-frontend/css/umc-modifications.less
@@ -1354,6 +1354,15 @@ p {
 			width: 24px;
 			height: 24px;
 		}
+
+		.umcGalleryContextIcon {
+			position: absolute;
+			top: 5px;
+			left: auto;
+			right: 10px;
+			width: 24px;
+			height: 24px;
+		}
 	}
 
 	.umcGalleryItemActive,
@@ -1363,21 +1372,16 @@ p {
 		cursor: pointer;
 	}
 
-	.umcGalleryItemActive .umcGalleryStatusIcon {
-		visibility: visible!important;
-	}
-
 }
 
 /* UMC overview page icons */
 .umcOverviewPane {
-	.umcGalleryItem:hover .umcGalleryStatusIcon {
-		visibility: visible;
+	.umcGalleryItemActive .umcGalleryContextIcon,
+	.umcGalleryItem:hover .umcGalleryContextIcon {
+		visibility: visible!important;
 	}
-	.umcGalleryItem	.umcGalleryStatusIcon {
+	.umcGalleryItem	.umcGalleryContextIcon {
 		visibility: hidden;
-		right: 10px;
-		left: auto;
 	}
 
 	.umcGalleryName,
