* Bug #30004: added new system notifications, refactored some CSS code into correct files, moved LoginDialog into umc/dialog/, added login messages into login Form
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45515 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/icons.less
+++ b/management/univention-management-console-frontend/css/icons.less
@@ -124,14 +124,11 @@
  */
 .icon24-umc-menu-help,
 .icon24-umc-menu-logout,
+.icon24-umc-menu-notifications,
 .icon24-umc-menu-settings {
 	background-image: url("icons/24x24/umc-menu.png");
 	width: 24px;
 	height: 24px;
-}
-
-.icon24-umc-menu-help {
-	background-position: -96px 0px;
 }
 
 .icon24-umc-menu-logout {
@@ -142,8 +139,12 @@
 	background-position: -48px 0px;
 }
 
-.dijitHover .icon24-umc-menu-help {
-	background-position: -120px 0px;
+.icon24-umc-menu-help {
+	background-position: -96px 0px;
+}
+
+.icon24-umc-menu-notifications {
+	background-position: -144px 0px;
 }
 
 .dijitHover .icon24-umc-menu-logout {
@@ -152,6 +153,23 @@
 
 .dijitHover .icon24-umc-menu-settings {
 	background-position: -72px 0px;
+}
+
+.dijitHover .icon24-umc-menu-help {
+	background-position: -120px 0px;
+}
+
+.dijitHover .icon24-umc-menu-notifications {
+	background-position: -168px 0px;
+}
+
+/**
+ * close icon for the notifications window
+ */
+.icon-umc-notifications-close {
+	background-image: url("icons/16x16/notifications-close.png");
+	width: 16px;
+	height: 16px;
 }
 
 /**
