* Bug #30004: adjusted mouseover/click/touch behaviour of the notifications, added missing translations
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45517 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/site.less
+++ b/management/univention-management-console-frontend/css/site.less
@@ -246,6 +246,7 @@ div[dijitpopupparent=umcMenuHelp] {
 	overflow: hidden;
 	background-color: rgba(65, 65, 66, 0.8);
 	max-width: 100%;
+	width: 100%;
 
 	.umcNotificationWrapper {
 		padding: 0.5em 20px 0.5em 26px;
