* Bug #30004: clean up old notification handling in Page, minor CSS fix, add property 'standingBy' to StandbyMixin (for Basic settings module)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45542 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/umc-modifications.less
+++ b/management/univention-management-console-frontend/css/umc-modifications.less
@@ -940,8 +940,7 @@
 /* adjust padding in the grid footer */
 .umc .umcGridFooter {
 	margin-bottom: 0.416em;
-	padding-top: 0.416em;
-	padding-bottom: 0.416em;
+	padding: 0.416em;
 	background-color: @grayAthens;
 	border-top: 1px solid black;
 	border-bottom: 2px solid @grayDusty;
