* Bug #32218: background color to default button
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45564 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/umc-modifications.less
+++ b/management/univention-management-console-frontend/css/umc-modifications.less
@@ -221,6 +221,7 @@
 .umc .umcSubmitButton {
   color: white;
   background-image: url(form/images/button.png);
+  background-color: @greenMantis;
   border: 1px solid #86b968;
 }
 
