* Bug #33093: make sure that a single available module is not opened twice, add CSS class for buttons with only icons
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45818 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/umc-modifications.less
+++ b/management/univention-management-console-frontend/css/umc-modifications.less
@@ -287,6 +287,16 @@
 	}
 }
 
+/* css classes for buttons with only icons (-> country flags in appliance mode) */
+.umc .dijitButton.umcIconOnly {
+    font-size: 100% !important;
+    padding: 0 !important;
+    background-image: none !important;
+    margin: 0 !important;
+    border: none !important;
+    .box-shadow(none) !important;
+}
+
 .umc .dijitToggleButton .dijitCheckBoxIcon {
   background-image: url(images/checkmarkNoBorder.png);
 }
