* Bug #32649: The progress bar does not have a transition anymore if the value is "indeterminate".
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46486 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/umc-modifications.less
+++ b/management/univention-management-console-frontend/css/umc-modifications.less
@@ -639,6 +639,15 @@
   background: @grayAthens url(images/progressBarAnim.gif) repeat-x top;
 }
 
+.umc .noTransition .dijitProgressBarFull {
+  -webkit-transition-property: none;
+  -moz-transition-property: none;
+  transition-property: none;
+  -webkit-transition-duration: 0;
+  -moz-transition-duration: 0;
+  transition-duration: 0;
+}
+
 .umc .dijitTimePickerItem {
   background-image: url(images/commonHighlight.png);
 }
