* Bug #32655: fix host dropdown design in Internet Explorer and Firefox
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47379 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/umc-modifications.less
+++ b/management/univention-management-console-frontend/css/umc-modifications.less
@@ -570,6 +570,20 @@
   background-image: url(images/menuHighlight.png);
 }
 
+.dj_ie8 .umc .dijitMenuItem {
+	// IE8 does not support transparency
+	background-image: none;
+}
+
+.dj_ie8 .umc .dijitMenu .dijitMenuItemHover td,
+.dj_ie8 .umc .dijitMenu .dijitMenuItemSelected td
+.umc .dijitMenu .dijitMenuItemDisabled.dijitMenuItemSelected td,
+.umc .dijitMenu .dijitMenuItemDisabled.dijitMenuItemHover td {
+	 // FF, IE 8,9,10,11
+	 border-top-color: transparent!important;
+	 border-bottom-color: transparent!important;
+}
+
 .umc .dijitMenu .dijitMenuItem td {
   padding-top: 0.416em;
   padding-bottom: 0.416em;
