--- a/management/univention-management-console-frontend/css/umc-modifications.less
+++ b/management/univention-management-console-frontend/css/umc-modifications.less
@@ -570,6 +570,31 @@
   background-image: url(images/menuHighlight.png);
 }
 
+.umc .dijitMenuItemDisabled .dijitMenuItemIconCell {
+	/* Bug #32655 */
+	opacity: inherit;
+}
+.umc .dijitMenuItemDisabled {
+	/* Bug #32655 */
+	opacity: 0.5;
+}
+
+.dj_ie8 .umc .dijitMenuItem {
+	// IE8 does not support transparency from the image (rule above)
+	background-image: none;
+}
+
+.dj_ie8 .umc .dijitMenu .dijitMenuItemHover td,
+.dj_ie8 .umc .dijitMenu .dijitMenuItemSelected td,
+.dj_ie8 .umc .dijitMenu .dijitMenuItemFocused td,
+.umc .dijitMenu .dijitMenuItemDisabled.dijitMenuItemSelected td,
+.umc .dijitMenu .dijitMenuItemDisabled.dijitMenuItemHover td,
+.umc .dijitMenu .dijitMenuItemDisabled.dijitMenuItemFocused td {
+	/* Bug #32655 */
+	border-top-color: transparent!important;
+	border-bottom-color: transparent!important;
+}
+
 .umc .dijitMenu .dijitMenuItem td {
   padding-top: 0.416em;
   padding-bottom: 0.416em;
