* Bug #32655: fiy typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47591 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/site.less
+++ b/management/univention-management-console-frontend/css/site.less
@@ -164,7 +164,7 @@ a {
 	}
 }
 
-.dj_ie8 .umc .umcHeader {
+.dj_ie8 .umc .umcHeader,
 .has-mozilla .umc .umcHeader {
 	.umcHeaderRight {
 		.umcHeaderText {
