--- a/management/univention-management-console-frontend/css/site.less
+++ b/management/univention-management-console-frontend/css/site.less
@@ -1,16 +1,18 @@
 @import "variables";
 
 html {
-	background: url(bg_images/page.png) repeat-y center #eeeeef;
-	height: 100%;
+	background: url(images/page.jpg) repeat center #eeeeef;
 }
 
 body {
 	/* disable scrollbars for the main window, long combo boxes may cause scrollbars to be shown */
 	overflow-y: hidden;
 	color: @grayShip;
-	height: 100%;
-	width: 100%;
+}
+
+*:focus {
+	// remove outline in chromium
+	outline: 0;
 }
 
 a {
@@ -48,35 +50,19 @@ a {
 	}
 }
 
-/* special rule for the Univention logo */
-.umc #univentionLogoWrapper {
-	position: absolute;
-	background: #d7d7d7 url(bg_images/header.jpg) center top no-repeat;
-	border-bottom: solid 1px @silverSand;
-	height: 56px;
-	width: 100%;
-
-	#univentionLogo {
-		position: relative;
-		background: url(univention_logo.png) no-repeat 30px 19px;
-		width: 960px;
-		height: 56px;
-		margin: 0 auto;
-	}
-}
-
-.has-mozilla .umc .umcHeader,
 .umc .umcHeader {
-	height: 46px;
+	height: 96px;
 	overflow: visible;
-	padding: 10px 26px 0 26px;
+//	padding: 10px 26px 0 26px;
+	padding: 0;
+	background: url(univention_logo.png) no-repeat 5px 7px;
 
 	.umcHeaderRight {
 
 		.umcHeaderSeparator {
 			height: 24px;
-			margin: 5px 10px;
-			border-right: 1px solid #58585a;
+			margin: 5px 5px;
+		//	border-right: 1px solid #58585a;
 			display: inline-block;
 			float: left;
 		}
@@ -118,7 +104,7 @@ a {
 			background: none;
 
 			.dijitButtonText {
-				display: none;
+			//	display: none;
 			}
 
 			.dijitButtonNode {
@@ -140,6 +126,7 @@ a {
 		box-shadow: none;
 	}
 
+	span[widgetid=umcMenuUsername].dijitDropDownButton,
 	span[widgetid=umcMenuHost].dijitDropDownButton {
 		// for vertical alignment with the other header elements
 		padding-top: 9px;
@@ -147,10 +134,12 @@ a {
 		margin-right: -7px;
 	}
 
+	#umcMenuUsername,
 	#umcMenuHost {
 		outline: none;
 	}
 
+	#umcMenuUsername .dijitButtonText,
 	#umcMenuHost .dijitButtonText {
 		display: inline-block;
 		background: none;
@@ -173,21 +162,15 @@ a {
 	}
 }
 
-/* make sure that the header menu are positioned correctly */
-div[dijitpopupparent=umcMenuHost],
-div[dijitpopupparent=umcMenuSettings],
-div[dijitpopupparent=umcMenuHelp] {
-	top: 45px !important;
-}
-
 /**
- * style the main BorderContainer of UMC
+ * style the main container of UMC
  */
 
 .umc .umcTopContainer {
-	height: 100%;
-	width: 960px;
-	margin: 0 auto;
+//	height: 100%;
+//	width: 960px;
+//	width: 100%;
+//	margin: 0 auto;
 
 	.SingleChild-child {
 		border: none !important;
@@ -197,20 +180,35 @@ div[dijitpopupparent=umcMenuHelp] {
 		background-color: #ededee;
 		border: none;
 		border-top: 1px solid #fff;
+		display: block;
+
+		.dijitTabChecked {
+			background-color: #000000;
+		}
 	}
 
+	.dijitTabContainerNested .dijitTabContainerTop-container {
+		float: left;
+		max-width: 80%!important;
+		position: static!important;
+	}
 	.dijitTabContainerNested .dijitTabContainerTop-tabs {
+		float: left;
+		width: auto!important;
+		position: static!important;
 		.dijitTabInnerDiv {
 			background: none;
 			border-right: 1px solid #fff;
 		}
 
 		.dijitTabContent {
+			display: block;
 			padding: 5px 7px;
+			border-bottom: thin solid #000000;
 		}
 		.dijitTabChecked .dijitTabContent {
-			padding: 5px 7px;
-			background-color: #74be4b;
+			//padding: 5px 7px;
+			background-color: #000000;
 		}
 
 		.dijitTabChecked .dijitTabContent .tabLabel {
@@ -244,13 +242,15 @@ div[dijitpopupparent=umcMenuHelp] {
 	overflow: visible;
 	z-index: 20;
 	width: 960px;
+	width: 100%;
 }
 
 .umc .umcNotification {
 	position: absolute;
 	display: block;
 	box-sizing: border-box;
-	top: 56px;
+	top: 70px;
+	top: 0;
 	left: 0;
 	overflow: hidden;
 	background-color: rgba(65, 65, 66, 0.8);
@@ -311,7 +311,7 @@ div[dijitpopupparent=umcMenuHelp] {
 	position: absolute;
 	right: 55px;
 	top: 7px;
-	background-image: url("bg_images/red_circle.png");
+	background-image: url("images/red_circle.png");
 	width: 17px;
 	height: 17px;
 	color: white;
@@ -321,17 +321,139 @@ div[dijitpopupparent=umcMenuHelp] {
 	font-weight: bold;
 }
 
+
+/**/
+
+.umc .umcBackToOverview {
+	background: none;
+	border: 0 none;
+	box-shadow: none;
+}
+.umc .umcBackToOverview .dijitButtonNode {
+	background-image: url('icons/24x24/up.png');
+	background-repeat: no-repeat;
+	background-size: 16px;
+	padding-top: 16px;
+	background-position: top center;
+}
+.umc .umcBackToOverview .dijitButtonText {
+	visibility: hidden;
+}
+.umc .umcBackToOverview.dijitFocus .dijitButtonText,
+.umc .umcBackToOverview.dijitHover .dijitButtonText {
+	visibility: visible;
+}
+
+.umc .umcModuleTopBar {
+	width: 100%;
+	height: 91px;
+	margin-bottom: 2em;
+	.umcModuleTopBarWrapper {
+		margin: auto;
+		width: 70%;
+		height: 50%;
+	}
+}
+
+.umc .umcModule {
+	background-color: #ffffff;
+	.umcModuleWrapper {
+		width: 70%;
+		margin: 0 auto;
+//		background-color: #ffffff;
+		.umcModuleContent {
+			height: 400px;
+			min-height: 400px;
+		}
+	}
+	.umcPageLeft {
+		float: left;
+		width: 20%;
+	}
+	.umcPageRight {
+		float: left;
+		width: 69%!important;
+	}
+	.umcPageFooter {
+		clear: left;
+		height: 30px;
+		width: 100%;
+	}
+}
+
+.umcTree {
+	height: 500px;
+}
+
 /* Main tab container */
 
 .umc .umcMainTabContainer {
-	padding: 20px 30px 10px 30px;
-
+//	padding: 20px 30px 10px 30px;
 }
 .umc .umcMainTabContainer > div > div {
-	padding: 0 !important;
-	margin: 0 !important;
-	top: 0 !important;
-	left: 0 !important;
+//	// modules
+//	padding: 0 !important;
+//	margin: 0 !important;
+//	top: 0 !important;
+//	left: 0 !important;
+}
+.umc .umcMainTabController {
+	height: 30px;
+	z-index: 3;
+	background-color: #e5e5e5;
+
+	.dijitTab {
+		padding: 7px;
+		padding-left: 2em;
+		height: 16px;
+		float: left;
+		background-image: url('layout/images/bg-tab.svg');
+		background-repeat: repeat-x;
+//		background-size: ;
+		border: 0 none;
+		border-left: thin solid #d3d3d3;
+		border-right: thin solid #d3d3d3;
+		.dijitTabCloseButton {
+			visibility: hidden;
+		}
+	}
+	.dijitTab.dijitTabHover, .dijitTab.dijitTabChecked {
+		background-image: none;
+		.dijitTabCloseButton {
+			visibility: visible;
+		}
+	}
+}
+
+.umc .umcOverviewContainer {
+	margin: 0 auto!important;
+	width: 70%;
+//	width: 960px;
+//	.dijitTabPaneWrapper {
+//		background: none;
+//	}
+}
+
+/* Category tabs */
+.umc #umcCategoryBar {
+	margin: 0 0 20px;
+
+	.dijitButton {
+		margin: 0;
+		padding: 0;
+		border: 0 none;
+		background: none;
+		box-shadow: none;
+	}
+	.dijitButtonContents {
+		margin: 10px 32px;
+		padding: 0;
+		border: 0 none;
+		background-size: 64px;
+		width: 65px;
+		padding-top: 83px;
+		background-repeat: no-repeat;
+	}
 }
 
 /* LiveSearchSidebar */
@@ -381,7 +503,7 @@ div[dijitpopupparent=umcMenuHelp] {
 /* GalleryPane */
 .umcGalleryPane.dgrid {
 	overflow: auto;
-	height: auto;
+	//height: auto;
 	border: none;
 
 	.dgrid-scroller {
@@ -416,19 +538,24 @@ div[dijitpopupparent=umcMenuHelp] {
 		position: relative;
 		float: left;
 		outline: none;
-		.box-sizing(border-box);
+	//	.box-sizing(border-box);
+		background-color: #f5f5f5;
 
 		// definitions in px instead of em due to size of image in px
 		padding: 15px 20px;
-		margin: 0 20px 5px 0;
-		height: 85px;
-		width: 345px;
+		margin: 0 12px 10px 0;
+		height: 70px;
+		width: 260px;
 
 		.umcGalleryName,
 		.umcGalleryDescription {
 			text-align: left;
 			display: block;
-			padding-left: 72px;
+//			padding-left: 72px;
+		}
+
+		.umcGalleryDescription {
+			border-top: thin solid @gray;
 		}
 
 		.umcGalleryDescription {
@@ -438,7 +565,11 @@ div[dijitpopupparent=umcMenuHelp] {
 		.umcGalleryIcon {
 			margin: 0;
 			padding-bottom: 0;
-			position: absolute;
+//			position: absolute;
+//			visibility: hidden;
+//			display: none;
+			height: 70px;
+			float: left;
 		}
 
 		.umcGalleryStatusIcon {
@@ -449,7 +580,16 @@ div[dijitpopupparent=umcMenuHelp] {
 			height: 24px;
 		}
 
+		.umcGalleryCategoryFavorite {
+			position: absolute;
+			top: 0;
+			right: 20px;
+			width: 10px;
+			height: 5px;
+		}
+
 		.umcGalleryContextIcon {
+			background-size: 18px;
 			position: absolute;
 			top: 5px;
 			left: auto;
@@ -461,22 +601,25 @@ div[dijitpopupparent=umcMenuHelp] {
 
 	.umcGalleryItemActive,
 	.umcGalleryItem:hover {
-		background-color: @grayAthens;
-		.border-radius(5px);
+	//	background-color: @grayAthens;
+	//	.border-radius(5px);
 		cursor: pointer;
+		.umcGalleryCategoryFavorite {
+			background-color: #ffffff!important;
+		}
 	}
 
 }
 
 /* UMC overview page icons */
 .umcOverviewPane {
-	.umcGalleryItemActive .umcGalleryContextIcon,
-	.umcGalleryItem:hover .umcGalleryContextIcon {
-		visibility: visible!important;
-	}
-	.umcGalleryItem	.umcGalleryContextIcon {
-		visibility: hidden;
-	}
+//	.umcGalleryItemActive .umcGalleryContextIcon,
+//	.umcGalleryItem:hover .umcGalleryContextIcon {
+//		visibility: visible!important;
+//	}
+//	.umcGalleryItem	.umcGalleryContextIcon {
+//		visibility: hidden;
+//	}
 
 	.umcGalleryName,
 	.umcGalleryDescription {
@@ -484,4 +627,10 @@ div[dijitpopupparent=umcMenuHelp] {
 	}
 }
 
-
+/** some tests **/
+.umc .dijitTextBox,
+.umc .dijitSelect {
+	background: none;
+	border: 0 none;
+	border-bottom: thin solid black;
+}
