--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/claro.css
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/claro.css
@@ -30,4 +30,5 @@
 @import url("../../../dojox/grid/resources/Grid.css");
 @import url("../../../dojox/image/resources/LightboxNano.css");
 @import url("Grid.css");
+@import url("icons.css");
 @import url("site.css");
