--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/header.styl
@@ -112,8 +112,8 @@
 	#umcMenuHost .dijitButtonText {
 		display: inline-block;
 		background: none;
-		box-shadow: none;
-		color: $text-color;
+					box-shadow: none;
+color: $text-color;
 	}
 
 	.dijitDisabled #umcMenuHost .dijitArrowButtonInner {
@@ -133,14 +133,9 @@
 				visibility: hidden;
 				margin-top: 0.5em;
 			}
-			.dijitIcon {
-				icon-image(-20, -20, "../");
-				display: block;
-				margin: auto;
-			}
 		}
 	}
-	.umcBackToOverview.dijitFocus,
+	.umcBackToOverview.dijitActive,
 	.umcBackToOverview.dijitHover {
 		.dijitButtonNode .dijitButtonText {
 			visibility: visible;
