--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
@@ -186,8 +186,9 @@ $document-border-color ?= $disabled-color;								// Border for <pre>, <code>, t
 
 // Icons, arrows, etc.
 $image-icons ?= "images/icons.svg";
+$width-icon ?= 20px;
 $image-arrow-sprite ?= $image-icons;
-$width-arrow-sprite ?= 20px;
+$width-arrow-sprite ?= $width-icon;
 $image-calendar-arrows ?= "images/calendarArrows.png";
 $image-calendar-arrows-ie6 ?= "images/calendarArrows8bit.png";
 $image-checkmark ?= "images/checkmarkNoBorder.png";
