--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/layout/TabContainer.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/layout/TabContainer.styl
@@ -77,7 +77,7 @@ topBottom-selected-tab-gradient($direction) {
 	border-color: $border-color;
 }
 .claro .dijitTabCloseButton {
-	icon-image(0, -160, "../", 12px, 12px);
+	icon-image(-80, -60, "../", 12px, 12px);
 	//background: url("../" + $image-layout-tab-close) no-repeat;
 	//width: 14px;
 	//height: 14px;
@@ -87,15 +87,18 @@ topBottom-selected-tab-gradient($direction) {
 	top: 8px;
 	right: 8px;
 }
-.claro .dijitTabCloseButtonHover {
-	background-position-x: 0;
-}
-.claro .dijitTabCloseButtonActive {
-	background-position-x: -20px;
-}
 .claro .dijitTabChecked .dijitTabCloseButton,
+.claro .dijitTabHover .dijitTabCloseButton,
 .claro .dijitTabActive .dijitTabCloseButton {
-	background-position-x: -20px;
+	background-position-x: -120px;
+}
+.claro .dijitTab .dijitTabCloseButtonHover {
+	background-position-x: -140px;
+	opacity: 1;
+}
+.claro .dijitTab .dijitTabCloseButtonActive {
+	background-position-x: -140px;
+	opacity: 0.66;
 }
 .claro .dijitTabSpacer {
 	/* set the spacer invisible.  note that height:0 doesn't work on IE/quirks, it's still 10px. */
@@ -133,12 +136,11 @@ topBottom-selected-tab-gradient($direction) {
 }
 .claro .dijitTabChecked {
 	// selected tab
-	border-color: $border-color;			// don't use $selected-border-color because need to match border of TabContainer
+	//border-color: $border-color;			// don't use $selected-border-color because need to match border of TabContainer
 	border-color: #fff;
 	//background-color: $selected-background-color;
 	background-color: #000;
 	color: $selected-text-color;
-	color: #fff;
 }
 .claro .dijitTabDisabled {
 	background-color: $tab-disabled-background-color;
