--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
@@ -1,23 +1,5 @@
 @import "../variables";
 
-button-nodijit() {
-	.dijitButtonNode {
-		background: none;
-		border-radius: 0;
-		border: none;
-		padding: 0;
-		box-shadow: none;
-
-		.dijitButtonText {
-			display: none;
-		}
-		.dijitIcon {
-			display: block;
-			margin: auto;
-		}
-	}
-}
-
 .umc .umcModuleHeader {
 	width: 100%;
 	min-height: 90px;
@@ -34,13 +16,23 @@ button-nodijit() {
 		z-index: 900;
 	}
 
-	// TODO: special css class for those
-	.dijitButton.umcCloseButton,
-	.dijitButton.umcHelpButton,
-	.dijitButton.umcBackButton,
-	.dijitButton.umcSaveButton {
-		button-nodijit();
+	.dijitButton {
 		padding-top: 0.9em;
+		.dijitButtonNode {
+			background: none;
+			border-radius: 0;
+			border: none;
+			padding: 0;
+			box-shadow: none;
+
+			.dijitButtonText {
+				display: none;
+			}
+			.dijitIcon {
+				display: block;
+				margin: auto;
+			}
+		}
 	}
 }
 
